# aiorabbitmq

./: .gitignore  LICENSE.txt  README.md  pyproject.toml  pytest.ini  requirements.txt  setup.cfg  setup.py
examples/: RPCConsumer.py  RPCPublisher.py  Server.py  User.py  loggerconsumer.py  loggerpublisher.py
src/aiorabbitmq/: __init__.py  __settings.py
src/aiorabbitmq.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/aiorabbitmq/RPC/: RPSExceptions.py  __RPSRabbitMQBase.py  __init__.py
src/aiorabbitmq/RPS/: RPSExceptions.py  __BaseRPCServer.py  __RPCClient.py  __RPSRabbitMQBase.py  __init__.py
src/aiorabbitmq/abc/: __AbstractLogger.py  __RabbitMQBase.py  __RabbitMQConsumerBase.py  __RabbitMQPublisherBase.py  __abstract_response_processor.py  __abstract_service_client.py  __init__.py
src/aiorabbitmq/base/: __Consumer.py  __Publisher.py  __init__.py
src/aiorabbitmq/logging/: __LoggerBase.py  __Loggers.py  __init__.py
src/aiorabbitmq/services/: __base_response_processor.py  __base_service_client.py  __init__.py
test/: conftest.py  test_base_consumer.py  test_base_publisher.py
test/integration/: conftest.py  test_RPCPublisher_and_RPCCounsumer.py  test_integration_BaseServiceClient_and_BaseMessageProcessor.py
test/unit/base_test/: test_base_consumer.py  test_base_publisher.py
test/unit/rpc_test/: conftest.py  test_rpc_consumer.py  test_rpc_publisher.py
test/unit/services_test/: test_message_processor.py  test_service_client.py
