[metadata]
name = aiorabbitmq
version = 1.0.0
author = James
author_email = james@example.com
description = Async RabbitMQ client library for Linux systems
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/yourusername/aiorabbitmq
project_urls =
    Documentation = https://github.com/yourusername/aiorabbitmq/docs
    Source Code = https://github.com/yourusername/aiorabbitmq
    Bug Tracker = https://github.com/yourusername/aiorabbitmq/issues
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: MIT License
    Operating System :: POSIX
    Operating System :: POSIX :: Linux
    Topic :: Software Development :: Libraries
    Topic :: System :: Distributed Computing
    Framework :: AsyncIO

[options]
package_dir = 
    = src
packages = find:
python_requires = >=3.7
platforms =
    Linux
    POSIX
install_requires =
    aio-pika >=9.0.0
    pydantic >=1.9.0

[options.package_data]
aiorabbitmq = py.typed

[options.entry_points]
console_scripts =
    aiorabbitmq-cli = aiorabbitmq.cli:main

[options.extras_require]
test =
    pytest >=7.0.0
    pytest-asyncio >=0.18.0
dev =
    mypy >=0.910
    flake8 >=4.0.0
    black >=22.0.0

[flake8]
max-line-length = 88
extend-ignore = E203
exclude = .git,__pycache__,build,dist

[mypy]
strict = True
ignore_missing_imports = True